Fix image misalignement

--- a/src/styles/_award.css
+++ b/src/styles/_award.css
@@ -5,3 +5,7 @@
 	gap: 20px;
 	flex-wrap: wrap;
 }
+
+.award img {
+	margin-top: 0;
+}
